fixed scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -498,7 +498,7 @@ ul {
   background: #000000 !important;
 }
 .swiper-scrollbar-horizontal {
-  background: #000000;
+  background: #dfd5d5;
 }
 .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
 .swiper-pagination-horizontal.swiper-pagination-bullets
